<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/online_requests"
        android:title="@string/menu_title_my_profile"
        android:icon="@drawable/ic_friend_requests_24"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/online_my_profile"
        android:title="@string/menu_title_my_profile"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/online_go_offline"
        android:title="@string/menu_title_offline"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/online_settings"
        android:title="@string/menu_title_settings"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item
        android:id="@+id/online_help"
        android:title="@string/menu_title_help"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item
        android:id="@+id/online_about"
        android:title="@string/menu_title_about"
        android:orderInCategory="6"
        app:showAsAction="never" />
    <item
        android:id="@+id/online_logout"
        android:title="@string/menu_title_logout"
        android:orderInCategory="7"
        app:showAsAction="never" />

</menu>