<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_title_settings"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_help"
        android:title="@string/menu_title_help"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_logout"
        android:title="@string/menu_title_logout"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_about"
        android:title="@string/menu_title_about"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>