<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/offline_go_online"
        android:title="@string/menu_title_online"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/offline_settings"
        android:title="@string/menu_title_settings"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/offline_help"
        android:title="@string/menu_title_help"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/offline_about"
        android:title="@string/menu_title_about"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>