<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".profile.ChangePasswordActivity">

    <!--  Toolbar  -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/change_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_text_change_password"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <!--  Old password  -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/help_change_password"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <!--  Old password  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/change_password_old_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/hint_current_password"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:startIconContentDescription="@string/content_text_lock"
                app:endIconMode="password_toggle"
                app:helperText="@string/help_login_password"
                app:helperTextEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/password_max_length"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  New password  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/change_password_new_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/hint_new_password"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:startIconContentDescription="@string/content_text_lock"
                app:endIconMode="password_toggle"
                app:helperText="@string/help_create_password"
                app:helperTextEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/password_max_length"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  Change password button  -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/margin_vertical_large"
                android:paddingVertical="@dimen/button_padding_vertical"
                android:paddingHorizontal="@dimen/button_padding_horizontal"
                android:text="@string/button_text_change_password"
                style="@style/Widget.MaterialComponents.Button" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>