<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--  Password  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:hint="@string/hint_password"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:startIconContentDescription="@string/content_text_lock"
        app:endIconMode="password_toggle"
        app:helperText="@string/help_create_password"
        app:helperTextEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/password_max_length"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>